--- a/DevDotLog/style.css
+++ b/DevDotLog/style.css
@@ -20,6 +20,9 @@ ul {
 	list-style: none;
 }
 
+.center{
+	text-align: center;
+}
 
 /** NAvigation BAR**/
 .navbar-inverse{
@@ -109,7 +112,8 @@ nav.navbar{
 }
 .personal-heading-work{
 	border-left: solid gray 3px ;
-	margin-top: 10px;
+	margin-top: 15px;
+	padding-top: 10px;
 	margin-bottom: 0px;
 }
 
