--- a/DevDotLog/css/style2.css
+++ b/DevDotLog/css/style2.css
@@ -2,11 +2,11 @@
 /** GLOBAL*/
 body {
 
- 	margin-top: 70px;
+ 	
     font-family: "Helvetica Neue";
     background-color: #d4dadb;
     /** MArgin Bottom by footer Height**/
-	margin-bottom: 0px;
+	margin-bottom: 90px;
 }
 
 
@@ -39,6 +39,8 @@ a:hover{
 	border-left: solid gray 1px;
 	font-size: 16px;
 }
+
+
 
 
 /** NAvigation BAR**/
@@ -89,6 +91,13 @@ nav.navbar{
  }
 
 
+.nav-tabs > .active > a,
+.nav-tabs > .active > a:hover,
+.nav-tabs > .active > a:focus{
+	color: white;
+      background: #d65c14;
+}
+
 
 /*Top of Website*/
 
@@ -98,76 +107,6 @@ nav.navbar{
 	
 }
 
-
-
-
-/*Title */
-.title-section{
-	/*background-color: #eff1f2;*/
-	background-color:#1a314f;
-	padding-top: 40px;
-	padding-bottom: 40px;
-
-
-}
-
-#title{
-	color: white;
-}
-
-
-#description{
-	/*Description about self. Positioned rigth under title. */
-	background-color: #454e59;
-	font-size: 16px;
-	color: white;
-	padding-right: 50px;
-	padding-left: 60px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-}
-
-
-
-.heading{
-	/*Defines style for type labels, example: Personal Information, Work, etc.*/
-	font-size: 22px;
-	font-weight: bold;
-	color: #1296a8;
-
-	
-
-}
-
-/*Job Entries*/
-
-.jobtitle{
-	font-weight: bold;
-	font-size: 18px;
-	color: #d65c14;
-	margin-top: 10px;
-
-	margin-bottom: 5px;
-}
-
-
-
-
-.job-desc{
-	margin-top: 5px;
-	padding-right: 90px;
-	padding-left: 50px;
-	font-size: 18px;
-}
-
-
-.personal-information p { 
-	font-size: 18px;
-	padding-left: 10px;
-
-	padding-top: 4px;
-
- }
 
 
 
@@ -190,7 +129,7 @@ footer  {
 	background-color:#1a314f;
 	color: white;
 	text-align: center;
-	height: 90px;
+	height: 100px;
 	width: 100%;
 }
 
