--- a/DevDotLog/style.css
+++ b/DevDotLog/style.css
@@ -194,3 +194,45 @@ footer  {
 	width: 100%;
 }
 
+
+@media(min-width: 100px) and (max-width:690px){
+	
+ 		
+		.job-desc{
+					margin-top: 5px;
+					padding-right: 10px;
+					padding-left: 20px;
+					font-size: 15px;
+			}
+
+
+		.personal-information p { 
+				font-size: 14px;
+			
+
+				padding-top: 4px;
+
+ 			}
+
+
+ 			ul {
+				list-style: none;
+				font-size: 15px;
+			}
+
+
+			.heading{
+				/*Defines style for type labels, example: Personal Information, Work, etc.*/
+				font-size: 18px;
+				font-weight: bold;
+				color: #1296a8;
+
+				
+
+			}
+
+			img{
+				width:200px;
+			}
+
+ 	}
